--- a/XoopsModules/indexscan/changelog.txt
+++ b/XoopsModules/indexscan/changelog.txt
@@ -35,3 +35,5 @@
  V1.0 Saturday 7 September 2009 - 15.55 (gmt +1)
 
 - Added French Language to the module // Thanks to kris_fr
+- Added this line in language/modinfo.php -- // Thanks CJ
+	define("_MI_INDEXSCAN_CREATEINDEX", "Create index files");
