--- a/XoopsModules/indexscan/changelog.txt
+++ b/XoopsModules/indexscan/changelog.txt
@@ -37,3 +37,7 @@
 - Added French Language to the module // Thanks to kris_fr
 - Added this line in language/modinfo.php -- // Thanks CJ
 	define("_MI_INDEXSCAN_CREATEINDEX", "Create index files");
+
+ V1.0 Saturday 12 September 2009 - 10.00 (gmt +1)
+ - Added dutch translation thanks to Reintjan
+	
