--- a/XoopsModules/indexscan/changelog.txt
+++ b/XoopsModules/indexscan/changelog.txt
@@ -48,3 +48,7 @@ V1.1 Wednesday 16 September 2009 - 13:30 (gmt +1)
 
 - Added the ability to scan for use of Ifram in indexfiles // Credit to Ghia for this Idea
 - Added Spanish translation // Thanks to DonCurioso at hispaxoops.com
+
+v1.1 thursday 17 september 2009 - 21:00 (gmt +1)
+
+- Indexscan included words with (header, mainfile and footer) in the iframe injection scan.
