--- a/XoopsModules/indexscan/changelog.txt
+++ b/XoopsModules/indexscan/changelog.txt
@@ -62,7 +62,7 @@ IndexScan version 2.0
 
 v2.0 friday 27 november 2009 - 13:28 (gmt +1)
 
-- Added searchword "fromCharCode" to search word in iframe scan, to look for encoded javascript includes
+- Added searchwords "fromCharCode","%69%66%72%61%6D%65","document.write(unescape(" to search words in iframe scan, to look for encoded javascript includes
 - Spiced the scanning up with some highlighting javascript + some jquery for the scan and messages with lazy load
 - Excluded the modules/indexscan from the iframe scan. The description and functions contain multible iframe-words and thus always gets caught in the scan.
 - new translations definitions in  admin.php are
@@ -70,9 +70,7 @@ v2.0 friday 27 november 2009 - 13:28 (gmt +1)
 // Added in 1.01
 define("_AM_INDEXSCAN_CHECKFORFILES","<tr class='header'><center><h2>Checking files for IFRAME Infection</h2></tr></center><center><small>Not that not all uses of Ifram is injections.<br>Check the code in the files found before you delete.<br><hr></small></center>");
 define("_AM_INDEXSCAN_UNABLETOREADFILE","Unable to open file ");
-define("_AM_INDEXSCAN_INFECTED","!!Word IFRAME found!!");
-define("_AM_INDEXSCAN_CLEAN","OK");
-define("_AM_INDEXSCAN_INJECTIONSCAN","Scan for ifram injections");
+define("_AM_INDEXSCAN_INFECTED"," found!!");
 
 //added in 2.00
 define("_AM_INDEXSCAN_SCANNING4MISS","<br>Looking for missin index files.<br>Please wait.");
