--- a/XoopsModules/indexscan/changelog.txt
+++ b/XoopsModules/indexscan/changelog.txt
@@ -89,3 +89,46 @@ define("_AM_INDEXSCAN_SCANNING4IFRAME","<br>Looking for iframes and encoded java
 //Added in 2.02
 define("_MI_INDEXSCAN_ROOTORSUB","Root or sub folder installation");
 define("_MI_INDEXSCAN_ROOTORSUB_DESC","Write here from where you want to start scanning<br/>'../../../' if your web is like 'www.myspace.com/mainfile,php'<br/>'../../../../' if it is like www.websted.dk/htdocs/mainfile.com");
+
+IndexScan version 2.03
+---------------------
+
+v2.1 Monday 18 January 2010 - 18:50 (gmt +1)
+
+- Added possibility to check files in webfolders against xoops check file and filter from Config. Filter separates extensions of files presumed to be ok.
+- Files found in check files marked red are presumed not to be part of Xoops, and can be deleted by the 'delete icon' using ajax + jquery avoid reloading the page.
+- Added the PclZip.Class to create zip file on the fly for users not having php > 5.20. 
+- Scan to create back up from the folders residing in the admin/folder2backup. The scan creates a copy of the empty folders, existing index.html, index.php, index.htm files, delete all other files, creates new indexfiles, and create link to download as zip. Handy when working with developing and want to create a zip with nothing but index files.  
+	I tested with htdoc from Xoops 2.4.4 in a Wamp, creation time is aprox. 2 minutes. Not tested in real server yet, but time must be considerble.
+- New language defines are
+
+(modinfo.php)
+
+//Added in 2.03
+define ("_MI_INDEXSCAN_ILLEGALFILETYPES", "Skip file types.");
+define("_MI_INDEXSCAN_ILLEGALFILETYPES_DESC","Add files you wish to skip while 'checking files'.<br/>These files will be considered 'safe'<br/>if they also are listed in the file 'admin/filecheck.txt'.");
+define("_MI_INDEXSCAN_FROMBACKUP", "Create file zip");
+define ("_MI_INDEXSCAN_FROMBACKUP_DESC", "Creates a zip archieve with same folder structure from the folder you ftp to folder2backup.<br/>The zip contains nothing but the folders and,<br/>index.html files where missing from<br/>your uploaded folder.<br/><br/>The folder name is the name of the folder in your folder2backup folder, for instance 'testing'.<br/>You can delete 'testing' this folder is only for example.");
+
+(admin.php)
+
+// Added in 2.03
+
+define ("_AM_INDEXSCAN_CHECKILLEGALFILES","Check files");
+define ("_AM_INDEXSCAN_SCANNING4ILLEGALFILES", "Scanning web files");
+define("_AM_INDEXSCAN_MAYBEOK", "Looks to be ok");
+define ("_AM_INDEXSCAN_NOTINXOOPSINSTALL", "Not Xoops file");
+define ("_AM_INDEXSCAN_FINISDILLEGAL", " files found that are not Xoops files. Total files scanned: ");
+define ("_AM_INDEXSCAN_ILLEGAL_DESC", "The file found Not to be Xoops files, are checked against checkfile.txt in admin folder, and agains files in config defined as allowed file types.<br/>These files could be unwanted tmp, thumbs.db, or info files.<br/>If you you dont need these files add them to automaticly delete in config and they will be deleted when you run this scan next time.");
+define ("_AM_INDEXSCAN_REALLYDELETE", "Are you sure ?, delete file.: ");
+define("_AM_INDEXSCAN_CREATEZIP", "Create zip file for download");
+define("_AM_INDEXSCAN_CREATINGZIP", "Creating backup with empty folders<br/>plus index files.<br/>");
+define("_AM_INDEXSCAN_BACKEDUPDELETEDFROMBACKUP", "Deleted files in folder from backup except index.html files");
+define("_AM_INDEXSCAN_BACKEDUP2", "Backed up folder.: ");
+define("_AM_INDEXSCAN_DOWNLOADZIP", "Download index files zip");
+define("_AM_INDEXSCAN_CREATINGZIPFORDOWNLOAD", "Creating zip file for download");
+define("_AM_INDEXSCAN_CREATEDINDEXINBACKUP", "Created index file in backup folder");
+define("_AM_INDEXSCAN_CLEANUPDONE", "Cleaning up...Done!");
+define("_AM_INDEXSCAN_FILESARECOPIED", " Files were copied to backup folder");
+define("_AM_INDEXSCAN_FILESDELETED", " Files were deleted from backup folder again");
+define("_AM_INDEXSCAN_FILESCREATED", " Index.html files were created in backupfolder");
